--- a/gitops/applications/base/sc-storage/kustomization.yaml
+++ b/gitops/applications/base/sc-storage/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - rook-ceph-namespace.yaml
+  - namespace.yaml
   - ceph-objectstore-service.yaml
   - ceph-dashboard-loadbalancer.yaml
   - rbac.yaml
@@ -13,7 +13,7 @@ helmCharts:
     version: ${ARGOCD_ENV_rook_ceph_version}
     repo: https://charts.rook.io/release
     valuesFile: rook-ceph-values.yaml
-    namespace: ${ARGOCD_ENV_rook_ceph_namespace}
+    namespace: ${ARGOCD_ENV_storage_namespace}
     includeCRDs: true
 
   - name: rook-ceph-cluster
@@ -21,5 +21,5 @@ helmCharts:
     version: ${ARGOCD_ENV_rook_ceph_version}
     repo: https://charts.rook.io/release
     valuesFile: rook-ceph-cluster-values.yaml
-    namespace: ${ARGOCD_ENV_rook_ceph_namespace}
+    namespace: ${ARGOCD_ENV_storage_namespace}
     includeCRDs: true
