storage storage ns var

--- a/gitops/argo-apps/base/sc-storage-post-config.yaml
+++ b/gitops/argo-apps/base/sc-storage-post-config.yaml
@@ -36,7 +36,7 @@ spec:
     plugin:
       name: envsubst
       env:
-        - name: "rook_ceph_namespace"
+        - name: "storage_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
         - name: "rook_ceph_image_version"
