--- a/gitops/argo-apps/base/sc-storage.yaml
+++ b/gitops/argo-apps/base/sc-storage.yaml
@@ -39,7 +39,7 @@ spec:
         - name: "rook_ceph_version"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_helm_version}"
 
-        - name: "rook_ceph_namespace"
+        - name: "storage_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
         - name: "rook_ceph_rbd_pool_size"
