pass ext storage ns

--- a/gitops/argo-apps/base/sc-storage-post-config.yaml
+++ b/gitops/argo-apps/base/sc-storage-post-config.yaml
@@ -39,5 +39,8 @@ spec:
         - name: "storage_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
+        - name: "ext_storage_namespace"
+          value: "${ARGOCD_ENV_utils_storage_namespace}"
+
         - name: "rook_ceph_image_version"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_image_version}"
