--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
@@ -5,7 +5,7 @@ helmCharts:
   - name: cluster-api-operator
     releaseName: cluster-api-operator
     # namespace: ${ARGOCD_ENV_capi_operator_namespace}
-    namespace: proxmox-infrastructure-system
+    # namespace: proxmox-infrastructure-system
     version:  ${ARGOCD_ENV_capi_operator_version}
     repo: https://kubernetes-sigs.github.io/cluster-api-operator
     valuesFile: cluster-api-operator-values.yaml
