disable dns utils

--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -26,9 +26,9 @@ resources:
   - ../../../base/vault.yaml
   - ../../../base/vault-post-config.yaml
   # dns-utils
-  - ../../../base/dns-utils.yaml
-  - ../../../base/dns-utils-post-config.yaml
-  - ../../../base/dns-utils-pre.yaml
+  # - ../../../base/dns-utils.yaml
+  # - ../../../base/dns-utils-post-config.yaml
+  # - ../../../base/dns-utils-pre.yaml
   # maintenance (velero,etc)
   # - ../../../base/maintenance.yaml
   # - ../../../base/maintenance-pre.yaml
