--- a/crossplane-packages/utils/configuration/crossplane.yaml
+++ b/crossplane-packages/utils/configuration/crossplane.yaml
@@ -2,7 +2,7 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: secret-syncer
+  name: utils
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
