--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -53,6 +53,8 @@ aws_crossplane_module_version: "0.49.2"
 crossplane_func_pat_version: "0.2.1"
 k8s_crossplane_module_version: "0.11.4"
 crossplane_func_go_templating_version: "0.8.0"
+crossplane_func_kcl_version: "0.11.2"
+crossplane_packages_utils_version: "498-13954340193-1"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
