--- a/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
@@ -66,8 +66,15 @@ spec:
       - key: max_objects
         value: "${ARGOCD_ENV_ceph_max_objects}"
       - key: max_size
-        value: ${ARGOCD_ENV_ceph_bucket_max_size}                              
-
+        value: ${ARGOCD_ENV_ceph_bucket_max_size}
+      - key: common_platform_db_secret_name
+        value: ${ARGOCD_ENV_common_platform_db_secret_name}
+      - key: common_mojaloop_db_secret_name
+        value: ${ARGOCD_ENV_common_mojaloop_db_secret_name}
+      - key: common_platform_db_external_name
+        value: ${ARGOCD_ENV_common_platform_db_external_name_service}
+      - key: common_mojaloop_db_external_name
+        value: ${ARGOCD_ENV_common_mojaloop_db_external_name_service}
   # All Terraform outputs are written to the connection secret.
   providerConfigRef:
     name: ${ARGOCD_ENV_deploy_env_onboard_app_name}
@@ -124,18 +131,18 @@ spec:
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
   configuration: |
-    terraform { 
+    terraform {
         backend "kubernetes" {
           secret_suffix     = "providerconfig-deploy-env-onboard"
           namespace         = "${ARGOCD_ENV_gitlab_namespace}"
           in_cluster_config = true
         }
-        
+
         required_providers {
           gitlab = {
             source = "gitlabhq/gitlab"
             version = "~> 16.0"
-          }        
+          }
 
           zitadel = {
             source = "zitadel/zitadel"
@@ -155,22 +162,22 @@ spec:
           time = {
             source = "hashicorp/time"
             version = "0.12.1"
-          }          
+          }
         }
      }
 
       variable "token" {
         type = string
-      }    
+      }
 
       provider "zitadel" {
           domain = "${ARGOCD_ENV_zitadel_fqdn}"
           jwt_profile_file = "$${path.module}/zitadel-admin-sa.json"
-      }      
-      
+      }
+
       provider "vault" {
         address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
-        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token 
+        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token
       }
 
       provider "kubernetes" {}
