enable configuring rook_ceph_rgw_log_level

--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -61,6 +61,9 @@ spec:
           - name: objects_replica_count
             value: "${ARGOCD_ENV_utils_rook_ceph_objects_replica_count}"
 
+          - name: rgw_log_level
+            value: "${ARGOCD_ENV_utils_rook_ceph_rgw_log_level}"
+
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
       path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_dynamic_secret_platform}/rook-ceph-cluster/${ARGOCD_ENV_utils_rook_ceph_volumes_provider}
