enable configuring rook_ceph_rgw_log_level

--- a/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
+++ b/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
@@ -20,5 +20,5 @@ spec:
     instances: 1
     priorityClassName: system-cluster-critical
     rgwCommandFlags:
-      debug_ms: "5"
-      debug_rgw: "5"
+      debug_ms: ${ARGOCD_ENV_rgw_log_level}
+      debug_rgw: ${ARGOCD_ENV_rgw_log_level}
