--- a/gitops/applications/base/utils-post-config/rbac.yaml
+++ b/gitops/applications/base/utils-post-config/rbac.yaml
@@ -8,10 +8,13 @@ rules:
     verbs: ["*"]
   - apiGroups: ["objectbucket.io"]
     resources: ["objectbucketclaims"]
-    verbs: ["*"] 
+    verbs: ["*"]
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
-    verbs: ["*"]        
+    verbs: ["*"]
+  - apiGroups: [""]
+    resources: ["services"]
+    verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -52,4 +55,4 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io 
+  apiGroup: rbac.authorization.k8s.io
