--- a/crossplane-packages/utils/compositions/object-syncer/resources/definition.yaml
+++ b/crossplane-packages/utils/compositions/object-syncer/resources/definition.yaml
@@ -1,16 +1,16 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xsecretsyncer.infitx.org
+  name: xobjectsyncer.infitx.org
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: infitx.org
   names:
-    kind: XSecretSyncer
-    plural: xsecretsyncer
+    kind: XObjectSyncer
+    plural: xobjectsyncer
   claimNames:
-    kind: SecretSyncer
-    plural: secretsyncer
+    kind: ObjectSyncer
+    plural: objectsyncer
   versions:
   - name: v1alpha1
     served: true
@@ -68,6 +68,12 @@ spec:
               parameters:
                 type: object
                 properties:
+                  objectType:
+                    type: string
+                    description: Type of object to be synced
+                    enum:
+                      - Secret
+                      - ConfigMap
                   source:
                     type: object
                     description: |-
