--- a/crossplane-packages/utils/compositions/object-syncer/test/scenarios/configmap/observed.yaml
+++ b/crossplane-packages/utils/compositions/object-syncer/test/scenarios/configmap/observed.yaml
@@ -2,15 +2,14 @@ apiVersion: kubernetes.crossplane.io/v1alpha2
 kind: Object
 metadata:
   annotations:
-    crossplane.io/composition-resource-name: source-secret
+    crossplane.io/composition-resource-name: source-object
 status:
   atProvider:
     manifest:
       apiVersion: v1
-      kind: Secret
+      kind: ConfigMap
       metadata:
-        name: secrettest
+        name: configmap-test
         namespace: default
       data:
         foo: bar
-      type: Opaque
