--- a/gitops/applications/base/sc-storage/rbac.yaml
+++ b/gitops/applications/base/sc-storage/rbac.yaml
@@ -26,6 +26,9 @@ rules:
   - apiGroups: [""]
     resources: ["pods/exec", "pods/attach"]
     verbs: ["create"]
+  - apiGroups: ["ceph.rook.io"]
+    resources: ["cephobjectstores"]
+    verbs: ["get", "list", "create", "update", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
