--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -56,3 +56,4 @@ enable_central_observability_read: false
 coredns_localcache_version: "1.11.3"
 aws_ebs_csi_driver_helm_version: "2.39.0"
 aws_ebs_csi_driver_replicas: 2
+rook_ceph_helm_version: "1.16.5"
