--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
@@ -226,3 +226,25 @@ spec:
       remoteRef:
         key: rook-external-config
         property: ROOK_EXTERNAL_USER_SECRET
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: rook-ceph-rgw-endpoint
+  namespace: ${ARGOCD_ENV_storage_namespace}
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: SecretStore
+    name: storage-secrets-store
+  target:
+    name: rook-ceph-rgw-endpoint
+    template:
+      type: kubernetes.io/rook
+      data:
+        rgw_endpoint: "{{ .RGW_ENDPOINT }}"
+  data:
+    - secretKey: RGW_ENDPOINT
+      remoteRef:
+        key: rook-external-config
+        property: RGW_ENDPOINT
