--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/env-storage-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/env-storage-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace # IfNotExists
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -26,7 +26,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -46,7 +46,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -66,7 +66,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -86,7 +86,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -106,7 +106,7 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: Retain
+  deletionPolicy: None
   refreshInterval: 1h
   secretStoreRefs:
     - name: vault-secret-store
@@ -145,3 +145,23 @@ spec:
         remoteRef:
           remoteKey: "${ARGOCD_ENV_env_name}/rook_ceph_mon"
           property: mon_secret
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: PushSecret
+metadata:
+  name: "${ARGOCD_ENV_env_name}-rook-ceph-rgw-endpoint"
+  namespace: "${ARGOCD_ENV_storage_namespace}"
+spec:
+  updatePolicy: Replace
+  deletionPolicy: None
+  refreshInterval: 1h
+  secretStoreRefs:
+    - name: vault-secret-store
+      kind: ClusterSecretStore
+  selector:
+    secret:
+      name: rook-ceph-rgw-endpoint
+  data:
+    - match:
+        remoteRef:
+          remoteKey: "${ARGOCD_ENV_env_name}/rook_ceph_rgw_endpoint"
