--- a/crossplane-packages/utils/compositions/object-syncer/test/scenarios/secret/claim.yaml
+++ b/crossplane-packages/utils/compositions/object-syncer/test/scenarios/secret/claim.yaml
@@ -1,10 +1,11 @@
 apiVersion: infitx.org/v1alpha1
-kind: SecretSyncer
+kind: ObjectSyncer
 metadata:
-  name: example-secret-syncer
+  name: example-secret-syncer-claim
   namespace: testa
 spec:
   parameters:
+    objectType: Secret
     source:
       namespace: testa
       name: example-secret
@@ -16,3 +17,4 @@ spec:
     destinationK8sProviderName: kubernetes-provider
   managementPolicies:
     - "*"
+
