--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -30,20 +30,20 @@ on:
 
 jobs:
   pull-request-package:
-    uses: mojaloop/iac-modules/.github/workflows/xplane_pull_request.yaml@feature/xplane-secret-syncer
+    uses: mojaloop/iac-modules/.github/workflows/xplane_pull_request.yaml@main
     name: 🧪 PR Preview Package
-    if: ${{ github.ref != 'refs/heads/main' }}
+    if: ${{ github.ref_type != 'tag' && github.ref != 'refs/heads/main' }}
     secrets: inherit
     with:
       CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
       CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}/xplane-packages
       SUBPATH: ${{ inputs.package }}
-      NEXT_VERSION: ${{ github.event.pull_request.number }}-${{ github.run_id }}-${{ github.run_attempt }}
+      NEXT_VERSION: v${{ github.event.pull_request.number }}-${{ github.run_id }}-${{ github.run_attempt }}
 
   release-package:
-    uses: mojaloop/iac-modules/.github/workflows/xplane_pull_request.yaml@feature/xplane-secret-syncer
+    uses: mojaloop/iac-modules/.github/workflows/xplane_pull_request.yaml@main
     name: 🚀 Release Package
-    if: ${{ github.event_name == 'release' && github.event.action == 'published' && github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref_type == 'tag' }}
     secrets: inherit
     with:
       CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
