--- a/.github/workflows/xplane_workflow_matrix.yaml
+++ b/.github/workflows/xplane_workflow_matrix.yaml
@@ -4,8 +4,9 @@ on:
   pull_request:
     branches:
     - '**'
-  release:
-    types: [published]
+  push:
+    tags:
+      - '**' # Push events to every tag including hierarchical tags like v1.0/beta
 
 jobs:
   detect-changes:
@@ -40,9 +41,9 @@ jobs:
         fi
 
         # Handle different event types
-        if [[ "${{ github.event_name }}" == "release" ]]; then
-          echo "🏷️ This is a release event"
-          # For releases, we'll process all packages
+        if [[ "${{ github.ref_type }}" == "tag" ]]; then
+          echo "🏷️ This is a tag event"
+          # For tags, we'll process all packages
           CHANGED_DIRS=""
           for DIR in $DIRECTORIES; do
             PACKAGE_NAME=$(basename "$DIR")
@@ -106,12 +107,12 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.detect-changes.outputs.matrix)}}
       fail-fast: false
-    uses: mojaloop/iac-modules/.github/workflows/xplane_workflow.yaml@feature/xplane-secret-syncer
+    uses: mojaloop/iac-modules/.github/workflows/xplane_workflow.yaml@main
     secrets:
       REGISTRY_USERNAME: ${{ github.actor }}
       REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
     with:
       registry: ghcr.io/${{ github.repository }}
       package: ${{ matrix.directory }}
-      release_name: ${{ github.event_name == 'release' && github.event.release.tag_name || '' }}
+      release_name: ${{ github.ref_type == 'tag' && github.ref_name || '' }}
       packages_dir: crossplane-packages
