--- a/crossplane-packages/utils/compositions/object-syncer/test/scenarios/secret/observed.yaml
+++ b/crossplane-packages/utils/compositions/object-syncer/test/scenarios/secret/observed.yaml
@@ -2,7 +2,7 @@ apiVersion: kubernetes.crossplane.io/v1alpha2
 kind: Object
 metadata:
   annotations:
-    crossplane.io/composition-resource-name: source-secret
+    crossplane.io/composition-resource-name: source-object
 status:
   atProvider:
     manifest:
