--- a/gitops/argo-apps/base/sc-storage.yaml
+++ b/gitops/argo-apps/base/sc-storage.yaml
@@ -42,5 +42,5 @@ spec:
         - name: "storage_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
-        - name: "rook_ceph_rbd_pool_size"
+        - name: "rook_ceph_pool_replication_size"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rbd_pool_replication_size}"
