--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
@@ -7,8 +7,8 @@ engineVersion: "16"
 dbClusterInstanceClass: "db.t3.medium"
 storageGB: 10
 vpcId: rds_vpc_id
-vpcCidr: "0.0.0.0/0" 
-subnets: "s1,s2" 
+vpcCidr: "0.0.0.0/0"
+subnets: "s1,s2"
 dbName: gitlab
 userName: gitlab
 passwordSecret:
@@ -22,3 +22,4 @@ preferredBackupWindow: 07:00-09:00
 storageEncrypted: true
 skipFinalSnapshot: false
 replicaCount: 1
+port: 5432
