--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -316,6 +316,9 @@ spec:
           - name: "capi_cluster_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
 
+          - name: "db_port"
+            value: "5432"
+
     #praefect db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
@@ -427,6 +430,9 @@ spec:
 
           - name: "capi_cluster_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
+
+          - name: "db_port"
+            value: "5432"
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
       path: gitops/applications/overlays/object_storage_provider/${ARGOCD_ENV_gitlab_pre_object_storage_provider}/gitlab-pre
