--- a/gitops/argo-apps/base/deploy-env.yaml
+++ b/gitops/argo-apps/base/deploy-env.yaml
@@ -110,3 +110,6 @@ spec:
 
         - name: "object_storage_regional_endpoint"
           value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
+
+        - name: "object_storage_region"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_region}"
